tests/baselines/reference/commentsExternalModules.errors.txt
commentsExternalModules_0.ts(2,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
commentsExternalModules_0.ts(10,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
commentsExternalModules_0.ts(26,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
commentsExternalModules_0.ts(36,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== commentsExternalModules_1.ts (0 errors) ====
    /**This is on import declaration*/
    import extMod = require("commentsExternalModules_0"); // trailing comment1
    extMod.m1.fooExport();
    var newVar = new extMod.m1.m2.c();
    extMod.m4.fooExport();
    var newVar2 = new extMod.m4.m2.c();
    
==== commentsExternalModules_0.ts (4 errors) ====
    /** Module comment*/
    export module m1 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        /** b's comment*/
        export var b: number;
        /** foo's comment*/
        function foo() {
            return b;
        }
        /** m2 comments*/
        export module m2 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            /** class comment;*/
            export class c {
            };
            /** i*/
            export var i = new c();
        }
        /** exported function*/
        export function fooExport() {
            return foo();
        }
    }
    m1.fooExport();
    var myvar = new m1.m2.c();
    
    /** Module comment */
    export module m4 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        /** b's comment */
        export var b: number;
        /** foo's comment
        */
        function foo() {
            return b;
        }
        /** m2 comments
        */
        export module m2 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            /** class comment; */
            export class c {
            };
            /** i */
            export var i = new c();
        }
        /** exported function */
        export function fooExport() {
            return foo();
        }
    }
    m4.fooExport();
    var myvar2 = new m4.m2.c();
    